--- a/Class_1-Assignment_1/index.html
+++ b/Class_1-Assignment_1/index.html
@@ -42,6 +42,34 @@
                 culpa cumque vel rerum perspiciatis
                 molestiae, pariatur debitis.</p>
         </action>
+        <action class="about-us">
+            <h2>More about us</h2>
+            <div>
+                <img src="./img/icon2.svg" alt="Securiy icon">
+            </div>
+            <h3>Securiy</h3>
+            <p>Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Dolorum praesentium
+                dolorem exercitationen inventore
+                temporibus. Repudiandae maxime consectetur
+                voluptate amet error repellendus dolores
+                culpa cumque vel rerum perspiciatis
+                molestiae, pariatur debitis.</p>
+        </action>
+        <action class="about-us">
+            <h2>More about us</h2>
+            <div>
+                <img src="./img/icon3.svg" alt="Securiy icon">
+            </div>
+            <h3>Securiy</h3>
+            <p>Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Dolorum praesentium
+                dolorem exercitationen inventore
+                temporibus. Repudiandae maxime consectetur
+                voluptate amet error repellendus dolores
+                culpa cumque vel rerum perspiciatis
+                molestiae, pariatur debitis.</p>
+        </action>
     </main>
 
     <footer>
